fixed sound input covering song-title input issue

--- a/app/assets/stylesheets/sequencer.css
+++ b/app/assets/stylesheets/sequencer.css
@@ -166,7 +166,7 @@ li {
 }
 
 .save-song {
-float: left;
+/*float: left;*/
 }
 
 
